--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./src/index.ts",
-    "build": "tsc --project ./src"
+    "build": "tsc --project ./"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "4.17.6",
+    "@types/express": "^4.17.6",
     "@types/node": "14.0.13",
+    "@types/request-promise": "^4.1.48",
     "nodemon": "^2.0.15",
     "ts-node": "8.10.2",
     "typescript": "3.9.5"
